--- a/lunarity/Cargo.toml
+++ b/lunarity/Cargo.toml
@@ -8,7 +8,7 @@ repository = "https://github.com/paritytech/lunarity"
 [dependencies]
 lunarity-ast = "0.2"
 lunarity-lexer = "0.2.1"
-lunarity-parser = "0.2.1"
+lunarity-parser = { path = "../parser" }
 
 [dev-dependencies]
 toolshed = "0.6"
